[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Button.gd" type="Script" id=1]
[ext_resource path="res://panel_style3.tres" type="StyleBox" id=2]
[ext_resource path="res://panel_style4.tres" type="StyleBox" id=3]
[ext_resource path="res://small_font_16_regular.tres" type="DynamicFont" id=4]
[ext_resource path="res://panel_style.tres" type="StyleBox" id=5]
[ext_resource path="res://GFX/wood_icon.png" type="Texture" id=6]
[ext_resource path="res://small_font_16.tres" type="DynamicFont" id=7]
[ext_resource path="res://GFX/spacer.png" type="Texture" id=8]
[ext_resource path="res://GFX/food_icon.png" type="Texture" id=9]
[ext_resource path="res://GFX/research_icon.png" type="Texture" id=10]
[ext_resource path="res://GFX/mana_icon.png" type="Texture" id=11]
[ext_resource path="res://GFX/repair_button_up.png" type="Texture" id=12]
[ext_resource path="res://GFX/repair_button_down.png" type="Texture" id=13]
[ext_resource path="res://GFX/destroy_button_up.png" type="Texture" id=14]
[ext_resource path="res://GFX/destroy_button_down.png" type="Texture" id=15]
[ext_resource path="res://panel_style2.tres" type="StyleBox" id=16]

[node name="UI" type="CanvasLayer"]
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 16.0
margin_top = 14.0
margin_right = 108.0
margin_bottom = 27.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Forester Hut"

[node name="Button3" type="Button" parent="."]
margin_left = 16.0
margin_top = 27.0
margin_right = 108.0
margin_bottom = 40.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Woodcutter"

[node name="Button4" type="Button" parent="."]
margin_left = 16.0
margin_top = 40.0
margin_right = 108.0
margin_bottom = 53.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Farm"

[node name="Button5" type="Button" parent="."]
margin_left = 16.0
margin_top = 53.0
margin_right = 108.0
margin_bottom = 66.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Laboratory"

[node name="Button6" type="Button" parent="."]
margin_left = 16.0
margin_top = 66.0
margin_right = 108.0
margin_bottom = 79.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Base tower"

[node name="Button7" type="Button" parent="."]
margin_left = 16.0
margin_top = 79.0
margin_right = 108.0
margin_bottom = 92.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Altar"

[node name="Button8" type="Button" parent="."]
margin_left = 16.0
margin_top = 92.0
margin_right = 108.0
margin_bottom = 105.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Wall"

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 728.0
margin_top = 16.0
margin_right = 768.0
margin_bottom = 30.0

[node name="MarginContainer" type="PanelContainer" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -205.0
margin_top = 1.0
margin_right = -21.0
margin_bottom = 31.0
custom_styles/panel = ExtResource( 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer"]
margin_left = 9.0
margin_top = 5.0
margin_right = 175.0
margin_bottom = 21.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer2"]
editor/display_folded = true
margin_right = 24.0
margin_bottom = 16.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0

[node name="Wood_Icon" type="TextureRect" parent="MarginContainer/HBoxContainer2/HBoxContainer/CenterContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 6 )

[node name="Wood_Label" type="Label" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
margin_left = 20.0
margin_top = 6.0
margin_right = 24.0
margin_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 1

[node name="spacer" type="TextureRect" parent="MarginContainer/HBoxContainer2"]
margin_left = 28.0
margin_right = 36.0
margin_bottom = 16.0
texture = ExtResource( 8 )

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer2"]
editor/display_folded = true
margin_left = 40.0
margin_right = 72.0
margin_bottom = 16.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer2/HBoxContainer2"]
margin_right = 16.0
margin_bottom = 16.0

[node name="Food_Icon" type="TextureRect" parent="MarginContainer/HBoxContainer2/HBoxContainer2/CenterContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 9 )

[node name="Food_Label" type="Label" parent="MarginContainer/HBoxContainer2/HBoxContainer2"]
margin_left = 20.0
margin_top = 6.0
margin_right = 32.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 7 )
text = "0/0"

[node name="spacer2" type="TextureRect" parent="MarginContainer/HBoxContainer2"]
margin_left = 76.0
margin_right = 84.0
margin_bottom = 16.0
texture = ExtResource( 8 )

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/HBoxContainer2"]
editor/display_folded = true
margin_left = 88.0
margin_right = 112.0
margin_bottom = 16.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer2/HBoxContainer3"]
margin_right = 16.0
margin_bottom = 16.0

[node name="Research_Icon" type="TextureRect" parent="MarginContainer/HBoxContainer2/HBoxContainer3/CenterContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 10 )

[node name="Research_Label" type="Label" parent="MarginContainer/HBoxContainer2/HBoxContainer3"]
margin_left = 20.0
margin_top = 6.0
margin_right = 24.0
margin_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 1

[node name="spacer3" type="TextureRect" parent="MarginContainer/HBoxContainer2"]
margin_left = 116.0
margin_right = 124.0
margin_bottom = 16.0
texture = ExtResource( 8 )

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/HBoxContainer2"]
margin_left = 128.0
margin_right = 152.0
margin_bottom = 16.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer2/HBoxContainer4"]
margin_right = 16.0
margin_bottom = 16.0

[node name="mana_Icon" type="TextureRect" parent="MarginContainer/HBoxContainer2/HBoxContainer4/CenterContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 11 )

[node name="mana_Label" type="Label" parent="MarginContainer/HBoxContainer2/HBoxContainer4"]
margin_left = 20.0
margin_top = 6.0
margin_right = 24.0
margin_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -800.0
margin_bottom = -257.0
mouse_filter = 2

[node name="pop_up_notif" type="Label" parent="CenterContainer"]
visible = false
margin_left = 330.0
margin_top = 319.0
margin_right = 470.0
margin_bottom = 323.0
custom_fonts/font = ExtResource( 7 )
text = "********Pop-up notification ********"
align = 1
valign = 1

[node name="pop_up_timer" type="Timer" parent="CenterContainer"]
wait_time = 4.0
one_shot = true

[node name="repair_button" type="TextureButton" parent="."]
margin_left = 120.0
margin_top = 8.0
margin_right = 152.0
margin_bottom = 40.0
toggle_mode = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )

[node name="demolish_button" type="TextureButton" parent="."]
margin_left = 160.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 40.0
toggle_mode = true
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 355.0
margin_top = 2.0
margin_right = 485.0
margin_bottom = 33.0
custom_styles/panel = ExtResource( 16 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 9.0
margin_top = 5.0
margin_right = 121.0
margin_bottom = 31.0

[node name="wave_nbr" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 112.0
margin_bottom = 4.0
custom_fonts/font = ExtResource( 7 )
text = "Current wave : XX"
align = 1

[node name="wave_direction" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 112.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 7 )
text = "Wave Direction"
align = 1

[node name="wave_difficulty" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 112.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 7 )
text = "Wave Difficulty"
align = 1
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_Button8_pressed"]
[connection signal="timeout" from="CenterContainer/pop_up_timer" to="." method="_on_pop_up_timer_timeout"]
[connection signal="toggled" from="repair_button" to="." method="_on_repair_button_toggled"]
[connection signal="toggled" from="demolish_button" to="." method="_on_demolish_button_toggled"]
